--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<li data-target="#myCarousel" data-slide-to="3" class=""></li>
 		</ol>
 		<div class="carousel-inner" role="listbox">
+			{% for deal in deals %}
 			<div class="item active">
 				<div class="container">
 					<div class="carousel-caption">
@@ -114,6 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
+			{% endfor %}
 			<div class="item item2">
 				<div class="container">
 					<div class="carousel-caption">
@@ -147,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</h3>
 						<p>Get Now
 							<span>40%</span> Discount</p>
-						<a class="button2" href="product.html">Shop Now </a>
+						<a class="button2" href="/deal-product/{{deal.id}}">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -188,109 +190,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				
 				
 				<!-- deals -->
+				{% for deal in deals %}
+				{% if deal.name == "Special Deals" %}
 				<div class="deal-leftmk left-side">
 					<h3 class="agileits-sear-head">Special Deals</h3>
+					{% for product in deal.products.all %}
 					<div class="special-sec1">
 						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d2.jpg' %}" alt="">
+							<img src="{{product.main_img.url}}" alt="">
 						</div>
 						<div class="col-xs-8 img-deal1">
-							<h3>Lay's Potato Chips</h3>
-							<a href="single.html">$18.00</a>
+							<a href="/single/{{product.id}}"><h3>{{product.name}}</h3></a>
+							<a href="/single/{{product.id}}">${{product.price}}</a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d1.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Bingo Mad Angles</h3>
-							<a href="single.html">$9.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d4.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Tata Salt</h3>
-							<a href="single.html">$15.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d5.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Gujarat Dry Fruit</h3>
-							<a href="single.html">$525.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="{% static 'images/d3.jpg' %}" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
+					{% endfor %}
 				</div>
+				{% endif %}
+				{% endfor %}
 				<!-- //deals -->
 			</div>
 			<!-- //product left -->
