--- a/templates/product.html
+++ b/templates/product.html
@@ -129,60 +129,27 @@
 				</div>
 				
 				<!-- deals -->
+				{% for deal in deals %}
+				{% if deal.name == "Special Deals" %}
 				<div class="deal-leftmk left-side">
 					<h3 class="agileits-sear-head">Special Deals</h3>
+					{% for product in deal.products.all %}
 					<div class="special-sec1">
 						<div class="col-xs-4 img-deals">
-							<img src="images/d2.jpg" alt="">
+							<img src="{{product.main_img.url}}" alt="">
 						</div>
 						<div class="col-xs-8 img-deal1">
-							<h3>Lay's Potato Chips</h3>
-							<a href="">$18.00</a>
+							<a href="/single/{{product.id}}"><h3>{{product.name}}</h3></a>
+							<a href="/single/{{product.id}}">${{product.price}}</a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d1.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Bingo Mad Angles</h3>
-							<a href="">$9.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d4.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Tata Salt</h3>
-							<a href="">$15.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d5.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Gujarat Dry Fruit</h3>
-							<a href="">$525.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d3.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
+					{% endfor %}
 				</div>
+				{% endif %}
+				{% endfor %}
 				<!-- //deals -->
+				
 			</div>
 			<!-- //product left -->
 			<!-- product right -->
