--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top_nav_right">
 					<div class="wthreecartaits wthreecartaits2 cart cart box_1">
 						<form action="#" method="post" class="last">
+							{% csrf_token %}
 							<input type="hidden" name="cmd" value="_cart">
 							<input type="hidden" name="display" value="1">
 							<button class="w3view-cart" type="submit" name="submit" value="">
@@ -272,6 +273,87 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //header-bot -->
 	
 
+	<!-- navigation -->
+	<div class="ban-top">
+		<div class="container">
+			<div class="agileits-navi_search">
+				<form action="#" method="post">
+					<select id="agileinfo-nav_search" name="agileinfo_search" required="" onchange="location = this.value;">
+						<option value="">All Categories</option>
+						{% for category in all_categories %}
+						<option value="/search/category/{{category.id}}">{{category.name}}</option>
+						{% endfor %}
+						
+					</select>
+				</form>
+			</div>
+			<div class="top_nav_left">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+							    aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav menu__list">
+								<li class="active">
+									<a class="nav-stylehead" href="/product">All Products
+										<span class="sr-only">(current)</span>
+									</a>
+								</li>
+								
+								{% for category in all_categories %}
+								{% if forloop.counter < 5 %}
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{category.name}}
+										<span class="caret"></span>
+									</a>
+									<ul class="dropdown-menu multi-column columns-3">
+										<div class="agile_inner_drop_nav_info">
+											{% for sub_cat in sub_categories %}
+											{% if sub_cat.category.id == category.id %}
+											{% if forloop.counter|divisibleby:2 %}
+											<div class="col-sm-4 multi-gd-img">
+												<ul class="multi-column-dropdown">
+													<li>
+														<a href="/search/subcategory/{{sub_cat.id}}">{{sub_cat}}</a>
+													</li>
+												</ul>
+											</div>
+											{% else %}
+											<div class="col-sm-4 multi-gd-img">
+												<ul class="multi-column-dropdown">
+													<li>
+														<a href="/search/subcategory/{{sub_cat.id}}">{{sub_cat}}</a>
+													</li>
+												</ul>
+											</div>
+											{% endif %}
+											{% endif %}
+											{% endfor %}											
+											<div class="clearfix"></div>
+										</div>
+									</ul>
+								</li>
+								{% endif %}
+								{% endfor %}
+								
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</div>
+	<!-- //navigation -->
+
     {% block content %} {% endblock %}
 
 	<!-- newsletter -->
@@ -280,7 +362,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-xs-8 agile-leftmk">
 				<h2>Get your Groceries delivered from local stores</h2>
 				<p>Free Delivery on your first order!</p>
-				<form action="#" method="post">
+				<form action="/subscription" method="post">
+					{% csrf_token %}
 					<input type="email" placeholder="E-mail" name="email" required="">
 					<input type="submit" value="Subscribe">
 				</form>
@@ -344,46 +427,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-xs-6 footer-grids">
 						<h3>Categories</h3>
 						<ul>
+							{% for category in categories %}
+							{% if forloop.counter|divisibleby:2 %}
 							<li>
-								<a href="product.html">Grocery</a>
+								<a href="/search/category/{{category.id}}">{{category.name}}</a>
 							</li>
-							<li>
-								<a href="product.html">Fruits</a>
-							</li>
-							<li>
-								<a href="product.html">Soft Drinks</a>
-							</li>
-							<li>
-								<a href="product2.html">Dishwashers</a>
-							</li>
-							<li>
-								<a href="product.html">Biscuits & Cookies</a>
-							</li>
-							<li>
-								<a href="product2.html">Baby Diapers</a>
-							</li>
+							{% endif %}
+							{% endfor %}
 						</ul>
 					</div>
 					<div class="col-xs-6 footer-grids agile-secomk">
 						<ul>
+							{% for category in categories %}
+							{% if forloop.counter|divisibleby:2 %}
+							{% else %}
 							<li>
-								<a href="product.html">Snacks & Beverages</a>
+								<a href="/search/category/{{category.id}}">{{category.name}}</a>
 							</li>
-							<li>
-								<a href="product.html">Bread & Bakery</a>
-							</li>
-							<li>
-								<a href="product.html">Sweets</a>
-							</li>
-							<li>
-								<a href="product.html">Chocolates & Biscuits</a>
-							</li>
-							<li>
-								<a href="product2.html">Personal Care</a>
-							</li>
-							<li>
-								<a href="product.html">Dried Fruits & Nuts</a>
-							</li>
+							{% endif %}
+							{% endfor %}
 						</ul>
 					</div>
 					<div class="clearfix"></div>
@@ -855,6 +917,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- for bootstrap working -->
 	<script src="{% static 'js/bootstrap.js' %}"></script>
 	<!-- //for bootstrap working -->
+
+	<!--quantity-->
+	<script>
+		$('.value-plus').on('click', function () {
+			var divUpd = $(this).parent().find('.value'),
+				newVal = parseInt(divUpd.text(), 10) + 1;
+			divUpd.text(newVal);
+		});
+
+		$('.value-minus').on('click', function () {
+			var divUpd = $(this).parent().find('.value'),
+				newVal = parseInt(divUpd.text(), 10) - 1;
+			if (newVal >= 1) divUpd.text(newVal);
+		});
+	</script>
+	<!--quantity-->
+	<script>
+		$(document).ready(function (c) {
+			$('.close1').on('click', function (c) {
+				$('.rem1').fadeOut('slow', function (c) {
+					$('.rem1').remove();
+				});
+			});
+		});
+	</script>
+	<script>
+		$(document).ready(function (c) {
+			$('.close2').on('click', function (c) {
+				$('.rem2').fadeOut('slow', function (c) {
+					$('.rem2').remove();
+				});
+			});
+		});
+	</script>
+	<script>
+		$(document).ready(function (c) {
+			$('.close3').on('click', function (c) {
+				$('.rem3').fadeOut('slow', function (c) {
+					$('.rem3').remove();
+				});
+			});
+		});
+	</script>
+	<!--//quantity-->
+
+
 	<!-- //js-files -->
 
 
