--- a/templates/deal-product.html
+++ b/templates/deal-product.html
@@ -104,17 +104,10 @@
 										<del>${{product.mrp}}</del>
 									</div>
 									<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
-										<form action="#" method="post">
+										<form action="/add-cart/{{product.id}}" method="post">
+											{% csrf_token %}
 											<fieldset>
-												<input type="hidden" name="cmd" value="_cart" />
-												<input type="hidden" name="add" value="1" />
-												<input type="hidden" name="business" value=" " />
-												<input type="hidden" name="item_name" value="{{product.name}}" />
-												<input type="hidden" name="amount" value="{{product.mrp}}" />
-												<input type="hidden" name="discount_amount" value="{{product.mrp|sub:product.price}}" />
-												<input type="hidden" name="currency_code" value="INR" />
-												<input type="hidden" name="return" value=" " />
-												<input type="hidden" name="cancel_return" value=" " />
+												<input type="hidden" name="next" value="{{ request.path }}">
 												<input type="submit" name="submit" value="Add to cart" class="button" />
 											</fieldset>
 										</form>
