--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -40,7 +40,7 @@
 			<!-- //tittle heading -->
 			<div class="checkout-right">
 				<h4>Your shopping cart contains:
-					<span>3 Products</span>
+					<span>{{item_count}} Products</span>
 				</h4>
 				<div class="table-responsive">
 					<table class="timetable_sub">
@@ -56,84 +56,36 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="rem1">
-								<td class="invert">1</td>
+							{% for item in cart %}
+							{% for product in item.products.all %}
+							<tr class="rem{{forloop.counter}}">
+								<td class="invert">{{forloop.counter}}</td>
 								<td class="invert-image">
-									<a href="single2.html">
-										<img src="images/a7.jpg" alt=" " class="img-responsive">
+									<a href="/single/{{product.id}}">
+										<img src="{{product.main_img.url}}" alt=" " class="img-responsive">
 									</a>
 								</td>
 								<td class="invert">
 									<div class="quantity">
 										<div class="quantity-select">
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value">
-												<span>1</span>
-											</div>
-											<div class="entry value-plus active">&nbsp;</div>
+											<input type="number" id="quantity" name="quantity" min="1" value="1">
 										</div>
 									</div>
 								</td>
-								<td class="invert">Spotzero Spin Mop</td>
-								<td class="invert">$888.00</td>
+								<td class="invert"><input type="text" id="product_name" name="product_name" value="{{product.name}}" readonly></td>
+								<td class="invert">₹ <input type="text" id="product_price" name="product_price" value="{{product.price}}" readonly></td>
 								<td class="invert">
 									<div class="rem">
-										<div class="close1"> </div>
+										
+										<button type="button" class="btn btn-default btn-sm" onclick="location.href='/remove-cart/{{product.id}}' ">
+											<span class="glyphicon glyphicon-trash"></span>
+										</button>
 									</div>
 								</td>
 							</tr>
-							<tr class="rem2">
-								<td class="invert">2</td>
-								<td class="invert-image">
-									<a href="single2.html">
-										<img src="images/s6.jpg" alt=" " class="img-responsive">
-									</a>
-								</td>
-								<td class="invert">
-									<div class="quantity">
-										<div class="quantity-select">
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value">
-												<span>1</span>
-											</div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</td>
-								<td class="invert">Fair & Lovely, 80 g</td>
-								<td class="invert">$121.60</td>
-								<td class="invert">
-									<div class="rem">
-										<div class="close2"> </div>
-									</div>
-								</td>
-							</tr>
-							<tr class="rem3">
-								<td class="invert">3</td>
-								<td class="invert-image">
-									<a href="single.html">
-										<img src="images/s5.jpg" alt=" " class="img-responsive">
-									</a>
-								</td>
-								<td class="invert">
-									<div class="quantity">
-										<div class="quantity-select">
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value">
-												<span>1</span>
-											</div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</td>
-								<td class="invert">Sprite, 2.25L (Pack of 2)</td>
-								<td class="invert">$180.00</td>
-								<td class="invert">
-									<div class="rem">
-										<div class="close3"> </div>
-									</div>
-								</td>
-							</tr>
+							{% endfor %}
+							{% endfor %}
+							
 						</tbody>
 					</table>
 				</div>
