--- a/templates/index.html
+++ b/templates/index.html
@@ -22,56 +22,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			{% for deal in deals %}
+			{% if forloop.counter < 5 %}
+			{% if forloop.first %}
 			<div class="item active">
 				<div class="container">
 					<div class="carousel-caption">
-						<h3>Big
-							<span>Save</span>
+						<h3>
+							<span>{{deal.name}}</span>
 						</h3>
-						<p>Get flat
-							<span>10%</span> Cashback</p>
-						<a class="button2" href="product.html">Shop Now </a>
-					</div>
-				</div>
-			</div>
-			{% endfor %}
-			<div class="item item2">
-				<div class="container">
-					<div class="carousel-caption">
-						<h3>Healthy
-							<span>Saving</span>
-						</h3>
-						<p>Get Upto
-							<span>30%</span> Off</p>
-						<a class="button2" href="product.html">Shop Now </a>
-					</div>
-				</div>
-			</div>
-			<div class="item item3">
-				<div class="container">
-					<div class="carousel-caption">
-						<h3>Big
-							<span>Deal</span>
-						</h3>
-						<p>Get Best Offer Upto
-							<span>20%</span>
-						</p>
-						<a class="button2" href="product.html">Shop Now </a>
-					</div>
-				</div>
-			</div>
-			<div class="item item4">
-				<div class="container">
-					<div class="carousel-caption">
-						<h3>Today
-							<span>Discount</span>
-						</h3>
-						<p>Get Now
-							<span>40%</span> Discount</p>
+						<p>
+							<span>{{deal.offer_line}}</span> </p>
 						<a class="button2" href="/deal-product/{{deal.id}}">Shop Now </a>
 					</div>
 				</div>
 			</div>
+			{% else %}
+			<div class="item item{{forloop.counter}}">
+				<div class="container">
+					<div class="carousel-caption">
+						<h3>
+							<span>{{deal.name}}</span>
+						</h3>
+						<p>
+							<span>{{deal.offer_line}}</span> </p>
+						<a class="button2" href="/deal-product/{{deal.id}}">Shop Now </a>
+					</div>
+				</div>
+			</div>
+			{% endif %}
+			{% endif %}
+			{% endfor %}
+			
+			
 		</div>
 		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
