--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul>
 					
 					<li>
-						<a href="#" data-toggle="modal" data-target="#myModal1">
+						<a href="#" data-toggle="modal" data-target="#myModal4">
 							<span class="fa fa-truck" aria-hidden="true"></span>Track Order</a>
 					</li>
 					
@@ -266,8 +266,47 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!-- //Modal content-->
 		</div>
 	</div>
-	<!-- //Modal2 -->
-	<!-- //signup Model -->
+	<!-- //Modal3 -->
+
+	<!-- Tracking Model -->
+	<!-- Modal4 -->
+	<div class="modal fade" id="myModal4" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body modal-body-sub_agile">
+					<div class="main-mailposi">
+						<span class="fa fa-envelope-o" aria-hidden="true"></span>
+					</div>
+					<div class="modal_body_left modal_body_left1">
+						<h3 class="agileinfo_sign">Track Order</h3>
+						<p>
+							Track your order status
+						</p>
+						<form action="/track-order" method="post">
+							{% csrf_token %}
+							<div class="styled-input agile-styled-input-top">
+								<input type="text" placeholder="Order Id" name="order_id" required="">
+							</div>
+							<div class="styled-input">
+								<input type="date" placeholder="Order Date" name="order_date" required="">
+							</div>
+							
+							<input type="submit" value="Track">
+						</form>
+						
+					</div>
+				</div>
+			</div>
+			<!-- //Modal content-->
+		</div>
+	</div>
+	<!-- //Modal4 -->
+	<!-- //tracking Model -->
+
 	<!-- //header-bot -->
 	
 
