--- a/templates/base.html
+++ b/templates/base.html
@@ -123,12 +123,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- cart details -->
 				<div class="top_nav_right">
 					<div class="wthreecartaits wthreecartaits2 cart cart box_1">
-						<form action="/checkout" method="post" class="last">
-							{% csrf_token %}
-							<button class="w3view-cart" type="submit" name="submit" value="">
+							<button class="w3view-cart" type="submit" name="submit" value="" onclick="location.href='/checkout'">
 								<i class="fa fa-cart-arrow-down" aria-hidden="true"><sup style="color: black;">{{item_count}}</sup></i>
 							</button>
-						</form>
 					</div>
 				</div>
 				<!-- //cart details -->
@@ -290,11 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							{% csrf_token %}
 							<div class="styled-input agile-styled-input-top">
 								<input type="text" placeholder="Order Id" name="order_id" required="">
-							</div>
-							<div class="styled-input">
-								<input type="date" placeholder="Order Date" name="order_date" required="">
-							</div>
-							
+							</div>							
 							<input type="submit" value="Track">
 						</form>
 						
@@ -558,173 +551,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 			<!-- //footer third section -->
-			<!-- footer fourth section (text) -->
-			<div class="agile-sometext">
-				<div class="sub-some">
-					<h5>Online Grocery Shopping</h5>
-					<p>Order online. All your favourite products from the low price online supermarket for grocery home delivery in Delhi,
-						Gurgaon, Bengaluru, Mumbai and other cities in India. Lowest prices guaranteed on Patanjali, Aashirvaad, Pampers, Maggi,
-						Saffola, Huggies, Fortune, Nestle, Amul, MamyPoko Pants, Surf Excel, Ariel, Vim, Haldiram's and others.</p>
-				</div>
-				<div class="sub-some">
-					<h5>Shop online with the best deals & offers</h5>
-					<p>Now Get Upto 40% Off On Everyday Essential Products Shown On The Offer Page. The range includes Grocery, Personal Care,
-						Baby Care, Pet Supplies, Healthcare and Other Daily Need Products. Discount May Vary From Product To Product.</p>
-				</div>
-				<!-- brands -->
-				<div class="sub-some">
-					<h5>Popular Brands</h5>
-					<ul>
-						<li>
-							<a href="product.html">Aashirvaad</a>
-						</li>
-						<li>
-							<a href="product.html">Amul</a>
-						</li>
-						<li>
-							<a href="product.html">Bingo</a>
-						</li>
-						<li>
-							<a href="product.html">Boost</a>
-						</li>
-						<li>
-							<a href="product.html">Durex</a>
-						</li>
-						<li>
-							<a href="product.html"> Maggi</a>
-						</li>
-						<li>
-							<a href="product.html">Glucon-D</a>
-						</li>
-						<li>
-							<a href="product.html">Horlicks</a>
-						</li>
-						<li>
-							<a href="product2.html">Head & Shoulders</a>
-						</li>
-						<li>
-							<a href="product2.html">Dove</a>
-						</li>
-						<li>
-							<a href="product2.html">Dettol</a>
-						</li>
-						<li>
-							<a href="product2.html">Dabur</a>
-						</li>
-						<li>
-							<a href="product2.html">Colgate</a>
-						</li>
-						<li>
-							<a href="product.html">Coca-Cola</a>
-						</li>
-						<li>
-							<a href="product2.html">Closeup</a>
-						</li>
-						<li>
-							<a href="product2.html"> Cinthol</a>
-						</li>
-						<li>
-							<a href="product.html">Cadbury</a>
-						</li>
-						<li>
-							<a href="product.html">Bru</a>
-						</li>
-						<li>
-							<a href="product.html">Bournvita</a>
-						</li>
-						<li>
-							<a href="product.html">Tang</a>
-						</li>
-						<li>
-							<a href="product.html">Pears</a>
-						</li>
-						<li>
-							<a href="product.html">Oreo</a>
-						</li>
-						<li>
-							<a href="product.html"> Taj Mahal</a>
-						</li>
-						<li>
-							<a href="product.html">Sprite</a>
-						</li>
-						<li>
-							<a href="product.html">Thums Up</a>
-						</li>
-						<li>
-							<a href="product2.html">Fair & Lovely</a>
-						</li>
-						<li>
-							<a href="product2.html">Lakme</a>
-						</li>
-						<li>
-							<a href="product.html">Tata</a>
-						</li>
-						<li>
-							<a href="product2.html">Sunfeast</a>
-						</li>
-						<li>
-							<a href="product2.html">Sunsilk</a>
-						</li>
-						<li>
-							<a href="product.html">Patanjali</a>
-						</li>
-						<li>
-							<a href="product.html">MTR</a>
-						</li>
-						<li>
-							<a href="product.html">Kissan</a>
-						</li>
-						<li>
-							<a href="product2.html"> Lipton</a>
-						</li>
-					</ul>
-				</div>
-				<!-- //brands -->
-				<!-- payment -->
-				<div class="sub-some child-momu">
-					<h5>Payment Method</h5>
-					<ul>
-						<li>
-							<img src="{% static 'images/pay2.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay5.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay1.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay4.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay6.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay3.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay7.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay8.png' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/pay9.png' %}" alt="">
-						</li>
-					</ul>
-				</div>
-				<!-- //payment -->
-			</div>
-			<!-- //footer fourth section (text) -->
+			
 		</div>
 	</footer>
 	<!-- //footer -->
 	<!-- copyright -->
 	<div class="copy-right">
 		<div class="container">
-			<p>© 2017 Grocery Shoppy. All rights reserved | Design by
+			<p>© 2023 Grocery Shoppy. All rights reserved | Design by
 				<a href="http://w3layouts.com"> W3layouts.</a> | Developed by
-				<a href="https://crrathod.herokuapp.com"> Chetan Rathod</a>
+				<a href="https://www.linkedin.com/in/chetan-rathod-8b0a14207/"> Chetan Rathod</a>
 			</p>
 		</div>
 	</div>
