order history, pdf invoice,checkout steps,cart update

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</li>
 					
 					<li>
-						<a href="/about" >
-							<span aria-hidden="true"></span>About Us
+						<a href="/order-history" >
+							<span class="fa fa-history" aria-hidden="true"></span>Order History
 						</a>
 					</li>
 					
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- cart details -->
 				<div class="top_nav_right">
 					<div class="wthreecartaits wthreecartaits2 cart cart box_1">
-							<button class="w3view-cart" type="submit" name="submit" value="" onclick="location.href='/checkout'">
+							<button class="w3view-cart" type="submit" name="submit" value="" onclick="location.href='/cart'">
 								<i class="fa fa-cart-arrow-down" aria-hidden="true"><sup style="color: black;">{{item_count}}</sup></i>
 							</button>
 					</div>
@@ -487,13 +487,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>Quick Links</h3>
 						<ul>
 							<li>
+								<a href="/order-history">Order History</a>
+							</li>
+							<li>
 								<a href="/about">About Us</a>
 							</li>
 							<li>
 								<a href="/contact">Contact Us</a>
-							</li>
-							<li>
-								<a href="/help">Help</a>
 							</li>
 							<li>
 								<a href="/faqs">Faqs</a>
