--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
 
 
@@ -17,20 +16,20 @@
 			<div class="container">
 				<ul class="w3_short">
 					<li>
-						<a href="/">Home</a>
+						<a href="index.html">Home</a>
 						<i>|</i>
 					</li>
-					<li>Checkout</li>
+					<li>Confirm Order</li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<!-- //page -->
-	<!-- checkout page -->
-	<div class="privacy">
+	<!-- FAQ-help-page -->
+	<div class="faqs-w3l">
 		<div class="container">
 			<!-- tittle heading -->
-			<h3 class="tittle-w3l">Checkout
+			<h3 class="tittle-w3l">Confirm Order
 				<span class="heading-style">
 					<i></i>
 					<i></i>
@@ -38,101 +37,90 @@
 				</span>
 			</h3>
 			<!-- //tittle heading -->
-			<div class="checkout-right">
-				<h4>Your shopping cart contains:
-					<span>{{item_count}} Products</span>
-				</h4>
-				<div class="table-responsive">
-					<form method="post" action="/place-order">
-						{% csrf_token %}
-					<table class="timetable_sub">
-						<thead>
-							<tr>
-								<th>SL No.</th>
-								<th>Product</th>
-								<th>Quality</th>
-								<th>Product Name</th>
-								<th>Price</th>
-								<th>Remove</th>
-							</tr>
-						</thead>
-						
-						<tbody>
-							{% for item in cart %}
-							{% for product in item.products.all %}
-							<tr class="rem{{forloop.counter}}">
-								<td class="invert">{{forloop.counter}}</td>
-								<td class="invert-image">
-									<a href="/single/{{product.id}}">
-										<img src="{{product.main_img.url}}" alt=" " class="img-responsive">
-									</a>
-								</td>
-								<td class="invert">
-									<div class="quantity">
-										<div class="quantity-select">
-											<input type="number" id="quantity" name="quantity{{forloop.counter}}" min="1" value="1">
-										</div>
-									</div>
-								</td>
-								<input type="hidden" id="product_id" name="product{{forloop.counter}}" value="{{product.id}}">
-								<td class="invert">{{product.name}}</td>
-								<td class="invert">₹ {{product.price}}</td>
-								<td class="invert">
-									<div class="rem">										
-										<button type="button" class="btn btn-default btn-sm" onclick="location.href='/remove-cart/{{product.id}}' ">
-											<span class="glyphicon glyphicon-trash"></span>
-										</button>
-									</div>
-								</td>
-							</tr>
-							{% endfor %}
-							{% endfor %}
-						</tbody>
-					</table>
-					<input type="hidden" name="item_count" value="{{item_count}}" class="button" />
-					<input type="submit" name="submit" value="Place Order (COD)" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;"/>
-					<input type="submit" name="submit" value="Place Order (Pay Online)" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;"/>
-				</form>
+			<div class="wthree-help">
+				<div class="col-xs-7 agile-left-help">
+					<h3 class="w3-head">User Details</h3>
+					<p>
+						Name: <b> {{user.first_name}}</b><br>
+						Mobile Number:<b> {{user.extended_user.mobile_no}}</b><br>
+						Address: <b>{{user.extended_user.address}}</b><br>
+						Email: <b>{{user.email}}</b>
+					</p>
 				</div>
+				
+				<div class="clearfix"></div>
 			</div>
-			<div class="checkout-left">
-				<div class="address_form_agile">
-					<h4>Your Delivary Address</h4>
-					<form action="/update-address" method="post" class="creditly-card-form agileinfo_form">
-						{% csrf_token %}
-						<div class="creditly-wrapper wthree, w3_agileits_wrapper">
-							<div class="information-wrapper">
-								<div class="first-row">
-									<div class="controls">
-										<input class="billing-address-name" type="text" name="name" placeholder="Full Name" value="{{user.first_name}}" required="">
-									</div>
-									<div class="w3_agileits_card_number_grids">
-										<div class="w3_agileits_card_number_grid_left">
-											<div class="controls">
-												<input type="text" placeholder="Mobile Number" name="mobile_no" value="{{user.extended_user.mobile_no}}" required="">
-											</div>
-										</div>
-										<div class="w3_agileits_card_number_grid_right">
-											<div class="controls">
-												<input type="text" placeholder="Address" name="address" value="{{user.extended_user.address}}" required="">
-											</div>
-										</div>
-										<div class="clear"> </div>
+			<div class="faq-w3agile">
+				<h3>Order Delails</h3>
+				<br>
+				<table class="timetable_sub">
+					<thead>
+						<tr>
+							<th>SL No.</th>
+							<th>Product</th>
+							<th>Product Name</th>
+							<th>Price</th>
+							<th>Quality</th>
+							<th>Total</th>
+						</tr>
+					</thead>
+
+					<tbody>
+						{% for order in orders %}
+						<tr class="rem{{forloop.counter}}">
+							<td class="invert">{{forloop.counter}}</td>
+							<td class="invert-image">
+								<a href="/single/{{order.product.id}}">
+									<img src="{{order.product.main_img.url}}" alt=" " class="img-responsive">
+								</a>
+							</td>
+							<td class="invert">{{order.product}}</td>
+							<td class="invert">₹ {{order.price}}</td>
+							<td class="invert">
+								<div class="quantity">
+									<div class="quantity-select">
+										{{order.quantity}}
 									</div>
 								</div>
-								<button class="submit check_out">Update Delivary Address</button>
-							</div>
-						</div>
-					</form>
-					<div class="checkout-right-basket">
-						<a href="/payment">Make a Payment
-							<span class="fa fa-hand-o-right" aria-hidden="true"></span>
-						</a>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
+							</td>
+							<input type="hidden" id="product_id" name="product{{forloop.counter}}" value="{{product.id}}">
+							<td class="invert">₹ {{order.total_cost}}</td>
+							
+						</tr>
+						{% endfor %}
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="3"> <b>Grand Total</b> </td>
+							<td colspan="3"> <b>₹ {{grand_total}}</b></td>
+						</tr>
+					<tfoot>
+				</table>
+
+				{% for order in orders %}
+				{% if forloop.counter == 1 %}
+				{% if order.order_status == "pending" %}
+
+				<button type="submit" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;" onclick="location.href='/confirm-order/cod/{{order_id}}'">Confirm Order (COD <i class="fa fa-money"></i> )
+				</button>
+
+				<button type="submit" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;" onclick="location.href='/confirm-order/online/{{order_id}}'">Confirm Order (Pay Online <i class="fa fa-credit-card"></i> )
+				</button>
+				
+				{% endif %}
+				
+				{% if order.order_status == "confirm" %}
+				<button type="submit" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;" onclick="location.href='/generate-report/{{order_id}}'">Generate Report <i class="fa fa-file-pdf-o"></i>
+				</button>
+
+				{% endif %}
+
+				{% endif %}
+				{% endfor %}
+
+
 			</div>
 		</div>
 	</div>
-	<!-- //checkout page -->
+	<!-- //FAQ-help-page -->
 {% endblock %}
