order history in render -checkout

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -113,6 +113,9 @@
 				<button type="submit" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;" onclick="location.href='/generate-report/{{order_id}}'">Generate Report <i class="fa fa-file-pdf-o"></i>
 				</button>
 
+				<button type="submit" class="btn btn-primary" style="margin-top: 2em;height: 4em;width: 20em;" onclick="location.href='/order-history'">Order History <i class="fa fa-history"></i>
+				</button>
+
 				{% endif %}
 
 				{% endif %}
