Orders: view all orders, view detail&Update order states,price invoice

--- a/templates/01-products.html
+++ b/templates/01-products.html
@@ -39,7 +39,7 @@
             </div>
             <!-- table container -->
             <a
-              href="/dashboard/add-product"
+              href="/dashboard/add-product/{{raw_id}}"
               class="btn btn-primary btn-block text-uppercase mb-3">Add new product</a>
             <button class="btn btn-primary btn-block text-uppercase">
               Delete selected products
@@ -75,6 +75,7 @@
             text-align: center;
         "/>
             <input type="submit" value="Add New Category" class="btn btn-primary btn-block text-uppercase mb-3"/>
+            </form>
           </div>
         </div>
       </div>
