--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -41,8 +41,20 @@
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard/orders">
+                                <i class="fas fa-box-open"></i>
+                                Orders
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard/products">
+                                <i class="fas fa-shopping-cart"></i>
+                                Products
+                            </a>
+                        </li>
 
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 <i class="far fa-file-alt"></i>
@@ -56,13 +68,7 @@
                                 <a class="dropdown-item" href="#">Yearly Report</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/dashboard/products">
-                                <i class="fas fa-shopping-cart"></i>
-                                Products
-                            </a>
-                        </li>
-
+                    
                         <li class="nav-item">
                             <a class="nav-link" href="/dashboard/accounts">
                                 <i class="far fa-user"></i>
