supoort: Contact and subscribers>view

--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -53,6 +53,26 @@
                                 Products
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard/deals">
+                                <i class="fas fa-gift"></i>
+                                Deals
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-address-book"></i>
+                                <span>
+                                    Support<i class="fas fa-angle-down"></i>
+                                </span>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/dashboard/contacts">Contacts</a>
+                                <a class="dropdown-item" href="/dashboard/subscribers">Subscribers</a>
+                            </div>
+                        </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
